--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 Django==3.0.2
 django-heroku==0.3.1
+django-redis-cache==2.1.0
 dropbox==9.4.0
 gunicorn==20.0.4
 matplotlib==3.1.2
+networkx==2.4
 numpy==1.18.1
 pandas==0.25.3
 psycopg2==2.8.4
