--- a/dining_room/static/react/package.json
+++ b/dining_room/static/react/package.json
@@ -35,6 +35,7 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-hot-loader": "^4.12.18"
+    "react-hot-loader": "^4.12.18",
+    "redux": "^4.0.5"
   }
 }
