--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==3.0.2
 django-heroku==0.3.1
 django-redis-cache==2.1.0
+django-storages==1.8
 dropbox==9.4.0
 gunicorn==20.0.4
 matplotlib==3.1.2
