--- a/dining_room/static/react/package.json
+++ b/dining_room/static/react/package.json
@@ -29,6 +29,9 @@
     "webpack-dev-server": "^3.10.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
@@ -36,6 +39,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.5"
   }
 }
