--- a/dining_room/static/react/package.json
+++ b/dining_room/static/react/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
+    "cross-fetch": "^3.0.4",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^16.12.0",
@@ -41,6 +42,8 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.12.18",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   }
 }
