--- a/dining_room/static/react/package.json
+++ b/dining_room/static/react/package.json
@@ -34,6 +34,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "bootstrap": "^4.4.1",
+    "bootstrap-slider": "^10.6.2",
     "cross-fetch": "^3.0.4",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
