--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==3.0.2
 django-cors-headers==3.2.1
+django-db-mutex==1.2.0
 django-heroku==0.3.1
 django-redis-cache==2.1.0
 django-storages==1.8
