--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==3.0.2
 django-cors-headers==3.2.1
 django-db-mutex==1.2.0
 django-heroku==0.3.1
+django-multiselectfield==0.1.11
 django-redis-cache==2.1.0
 django-storages==1.8
 dropbox==9.4.0
